--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@babel/core": "^7.21.4",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "parcel": "^2.8.3",
-    "process": "^0.11.10"
+    "process": "^0.11.10",
+    "tailwindcss": "^3.3.2"
   },
   "dependencies": {
     "react": "^18.2.0",
