--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "This is React practice Project",
   "scripts": {
-    "tail":"npx tailwindcss -i ./components/index.css -o ./dist/output.css --watch",
+    "tail": "npx tailwindcss -i ./components/index.css -o ./dist/output.css --watch",
     "start": "npx parcel ./index.html"
   },
   "keywords": [
@@ -19,8 +19,10 @@
     "tailwindcss": "^3.3.2"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0"
   },
   "browserslist": {}
